# BWAI_Obsidian_Logic

./: README.md  VERCEL_DEPLOY.md  package.json  requirements.txt  run.ps1  vercel.json
api/: index.py
backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  app.py  debug_output.txt  inspect_enum.py  normalize_db.py  pyproject.toml  requirements.txt  test_diagnostics.txt  test_final_debug.txt  test_final_out.txt  test_final_result.txt  test_out_v2.txt  test_out_v3.txt  test_out_v4.txt  test_profile_init.py  test_qr.py  test_register.py  test_result.txt  test_sql_echo.txt  vercel.json
backend/alembic/: env.py
backend/alembic/versions/: aeaefb6ca8ee_proper_initial_schema.py
backend/api/: index.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  encryption.py  rate_limit.py  redis.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  clinical.py  finance.py  medical.py  profile.py  user.py
backend/app/routers/: ai.py  appointments.py  auth.py  consents.py  doctor.py  emergency.py  hospital.py  insurance.py  medical_records.py  patient.py  prescriptions.py
backend/app/schemas/: auth_schema.py  clinical.py  doctor_schema.py  emergency.py  finance.py  insurance.py  medical.py  patient.py
backend/app/scripts/: create_tables.py  generate_keys.py
backend/app/services/: ai_service.py  appointment_service.py  audit_service.py  auth_service.py  consent_service.py  doctor_service.py  email_service.py  notification_service.py  qr_service.py  (+2 more)
backend/keys/: private.pem  public.pem
(+100 files in other folders)
